Сделай дизайн карточки товара

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 .DS_Store
 **/.DS_Store
+
+# Large content folders (media/catalog)
+Фото видео/
+Фото и видео/
+продукты и услуги/
+gkee present/
+GKYE Present/
