--- a/data/projects.json
+++ b/data/projects.json
@@ -13,6 +13,7 @@
       "units": "ГПУ 210 кВт × 80",
       "mode": "Основной",
       "scope": ["Поставка", "ПНР", "Интеграция", "Автоматика", "Сервис"],
+      "description": "Крупный энергоцентр на газе для непрерывной нагрузки. В составе работ: подбор и поставка оборудования, интеграция, настройка автоматики и систем управления, пусконаладочные работы (ПНР), ввод в эксплуатацию и сервисное сопровождение.",
       "result": "Запуск энергоцентра 20 МВт, работа под непрерывную нагрузку 24/7.",
       "ndaLabel": "Публичная версия: без заказчика/адреса/стоимости",
       "image": "assets/site-photos/projects/cases/mining-20mw.jpeg"
@@ -29,6 +30,7 @@
       "units": "ГПУ 400 кВт × 3",
       "mode": "Основной",
       "scope": ["Интеграция", "ПНР", "Автоматика", "Параллельная работа"],
+      "description": "Интеграция ГПУ в майнинг-инфраструктуру с настройкой параллельной работы, защит и автоматики. Выполнены пусконаладочные работы и ввод в эксплуатацию.",
       "result": "Параллельная работа ГПУ и подключение к майнинг-инфраструктуре.",
       "ndaLabel": "Публичная версия: без заказчика/адреса/стоимости",
       "image": "assets/site-photos/projects/cases/mining-1-2mw.jpg"
@@ -45,6 +47,7 @@
       "units": "ГПУ (конфигурация по проекту)",
       "mode": "Основной",
       "scope": ["Поставка", "Доработка", "ПНР", "Сервис"],
+      "description": "Частичная поставка оборудования, доработка клиентских ГПУ под условия эксплуатации, пусконаладочные работы (ПНР) и сервисное обслуживание. Настройка режимов работы и регламентов эксплуатации под нагрузку 24/7.",
       "result": "Ввод в эксплуатацию и обслуживание объекта под режим 24/7.",
       "ndaLabel": "Публичная версия: без адреса/стоимости",
       "image": "assets/site-photos/projects/cases/fast-mine-5mw.jpg"
@@ -61,6 +64,7 @@
       "units": "ГПУ (конфигурация по проекту)",
       "mode": "Основной",
       "scope": ["Доработка", "ПНР", "Сервис"],
+      "description": "Доработка и адаптация оборудования под условия объекта, пусконаладочные работы (ПНР), настройка автоматики и режимов работы, а также сервисное сопровождение эксплуатации.",
       "result": "Пусконаладка и сопровождение эксплуатации энергоцентра.",
       "ndaLabel": "Публичная версия: без заказчика/адреса/стоимости",
       "image": "assets/site-photos/projects/cases/saratov-7mw.jpg"
@@ -77,6 +81,7 @@
       "units": "ГПУ (конфигурация по проекту)",
       "mode": "Основной",
       "scope": ["Подготовка площадки", "ТУ на газ", "Поставка", "Интеграция"],
+      "description": "Подготовка площадки под размещение ГПУ, получение ТУ на газ, поставка оборудования и интеграция в инфраструктуру объекта. Обеспечение готовности к вводу в эксплуатацию.",
       "result": "Подготовлена инфраструктура под установку ГПУ и запуск объекта.",
       "ndaLabel": "Публичная версия: без заказчика/адреса/стоимости",
       "image": "assets/site-photos/projects/cases/mining-site-3mw.png"
@@ -94,8 +99,10 @@
       "units": "ГПУ 250 кВт × 12",
       "mode": "Основной",
       "scope": ["Поставка", "Интеграция", "Автоматика", "Параллельная работа", "ПНР"],
+      "description": "Поставка ГПУ, интеграция в инфраструктуру объекта, настройка автоматики, параллельной работы и защит, выполнение пусконаладочных работ (ПНР) и ввод в эксплуатацию.",
       "result": "Установлено 12 агрегатов, суммарно 3,0 МВт установленной мощности.",
       "ndaLabel": "NDA: без заказчика/адреса/стоимости",
+      "contractSum": "85 000 000,00 ₽",
       "image": "assets/site-photos/projects/cases/bio-sfera.jpeg"
     },
     {
@@ -110,8 +117,10 @@
       "units": "ГПУ 250 кВт × 10",
       "mode": "Основной",
       "scope": ["Поставка", "Интеграция", "Утилизация тепла", "ПНР", "Автоматика"],
+      "description": "Поставка и интеграция энергоустановок с системой утилизации тепла. Настройка автоматики, режимов работы и защит. Пусконаладочные работы (ПНР) и ввод в эксплуатацию.",
       "result": "Поставка и ввод в эксплуатацию 10 агрегатов (2,5 МВт).",
-      "ndaLabel": "NDA: без заказчика/адреса/стоимости"
+      "ndaLabel": "NDA: без заказчика/адреса/стоимости",
+      "contractSum": "68 200 000,00 ₽"
     },
     {
       "slug": "projects-case-2024-7gpus-250kw-ut-heat",
@@ -125,8 +134,10 @@
       "units": "ГПУ 250 кВт × 7",
       "mode": "Основной",
       "scope": ["Поставка", "Утилизация тепла", "ПНР", "Автоматика"],
+      "description": "Поставка ГПУ на раме с системой утилизации тепла. Настройка автоматики и защит, выполнение пусконаладочных работ (ПНР) и ввод в эксплуатацию.",
       "result": "Установлено 7 агрегатов, суммарно 1,75 МВт установленной мощности.",
-      "ndaLabel": "NDA: без заказчика/адреса/стоимости"
+      "ndaLabel": "NDA: без заказчика/адреса/стоимости",
+      "contractSum": "47 000 000,00 ₽"
     },
     {
       "slug": "projects-case-2024-2x400kw-2x250kw-ut-heat",
@@ -140,8 +151,10 @@
       "units": "ГПУ 400 кВт × 2; ГПУ 250 кВт × 2",
       "mode": "Основной",
       "scope": ["Поставка", "Утилизация тепла", "ПНР", "Автоматика"],
+      "description": "Поставка оборудования на раме с системой утилизации тепла. Интеграция, настройка автоматики и защит. Выполнение пусконаладочных работ (ПНР) и ввод в эксплуатацию.",
       "result": "Поставка и запуск комплекса, суммарно 1,3 МВт установленной мощности.",
       "ndaLabel": "NDA: без заказчика/адреса/стоимости",
+      "contractSum": "39 157 200,00 ₽",
       "image": "assets/site-photos/projects/cases/stroysoyuz.jpg"
     },
     {
@@ -156,8 +169,10 @@
       "units": "ГПУ 250 кВт × 6",
       "mode": "Основной",
       "scope": ["Поставка", "Интеграция", "ПНР"],
+      "description": "Поставка ГПУ и интеграция в инфраструктуру объекта. Настройка автоматики и защит. Пусконаладочные работы (ПНР) и ввод в эксплуатацию.",
       "result": "Установлено 6 агрегатов, суммарно 1,5 МВт установленной мощности.",
-      "ndaLabel": "NDA: без заказчика/адреса/стоимости"
+      "ndaLabel": "NDA: без заказчика/адреса/стоимости",
+      "contractSum": "36 600 000,00 ₽"
     },
     {
       "slug": "projects-case-2025-6gpus-250kw-kirov",
@@ -171,8 +186,10 @@
       "units": "ГПУ 250 кВт × 6",
       "mode": "Основной",
       "scope": ["Поставка", "ПНР", "Автоматика"],
+      "description": "Поставка ГПУ, монтажная интеграция и пусконаладочные работы (ПНР). Настройка автоматики и защит, ввод в эксплуатацию.",
       "result": "Поставка и ввод в эксплуатацию 6 агрегатов (1,5 МВт).",
       "ndaLabel": "NDA: без заказчика/адреса/стоимости",
+      "contractSum": "38 144 000,00 ₽",
       "image": "assets/site-photos/projects/cases/ip-noskov.jpg"
     },
     {
@@ -187,8 +204,10 @@
       "units": "ГПУ 180 кВт × 5",
       "mode": "Основной",
       "scope": ["Поставка", "Контейнеризация", "Параллельная работа", "Утилизация тепла", "ПНР"],
+      "description": "Поставка контейнерного решения с настройкой параллельной работы, интеграцией систем утилизации тепла, выполнением ПНР и вводом в эксплуатацию.",
       "result": "Установлено 5 агрегатов (0,9 МВт) в контейнерном исполнении.",
       "ndaLabel": "NDA: без заказчика/адреса/стоимости",
+      "contractSum": "39 430 000,00 ₽",
       "image": "assets/site-photos/projects/cases/ambar-plast.jpg"
     },
     {
@@ -203,8 +222,10 @@
       "units": "ГПУ 250 кВт × 2",
       "mode": "Основной",
       "scope": ["Поставка", "Параллельная работа", "ПНР", "Автоматика"],
+      "description": "Поставка агрегатов, интеграция и настройка параллельной работы с сетью, выполнение ПНР и ввод в эксплуатацию.",
       "result": "Поставка и интеграция 2 агрегатов (0,5 МВт).",
       "ndaLabel": "NDA: без заказчика/адреса/стоимости",
+      "contractSum": "13 500 000,00 ₽",
       "image": "assets/site-photos/projects/cases/ambar-plast.jpg"
     },
     {
@@ -219,8 +240,10 @@
       "units": "ГПУ 250 кВт × 5",
       "mode": "Основной",
       "scope": ["Поставка", "Интеграция", "ПНР"],
+      "description": "Поставка агрегатов (кожух), интеграция и настройка, выполнение пусконаладочных работ (ПНР) и ввод в эксплуатацию.",
       "result": "Поставка 5 агрегатов, суммарно 1,25 МВт установленной мощности.",
       "ndaLabel": "NDA: без заказчика/адреса/стоимости",
+      "contractSum": "26 350 000,00 ₽",
       "image": "assets/site-photos/projects/cases/ecogrupp-spb.jpg"
     },
     {
@@ -235,8 +258,10 @@
       "units": "ГПУ 250 кВт × 2",
       "mode": "Основной",
       "scope": ["Поставка", "Рекуперация тепла", "Параллельная работа", "ПНР"],
+      "description": "Поставка агрегатов, интеграция модуля рекуперации/утилизации тепла, настройка параллельной работы с сетью и выполнение ПНР.",
       "result": "Поставка и ввод в эксплуатацию 2 агрегатов (0,5 МВт).",
       "ndaLabel": "NDA: без заказчика/адреса/стоимости",
+      "contractSum": "12 450 000,00 ₽",
       "image": "assets/site-photos/projects/cases/yug-beton-servis.jpeg"
     },
     {
@@ -251,8 +276,10 @@
       "units": "ГПУ 180 кВт × 2",
       "mode": "Основной",
       "scope": ["Поставка", "ПНР"],
+      "description": "Поставка агрегатов на раме и выполнение пусконаладочных работ (ПНР). Настройка базовой автоматики и ввод в эксплуатацию.",
       "result": "Поставка и запуск 2 агрегатов (0,36 МВт).",
       "ndaLabel": "NDA: без заказчика/адреса/стоимости",
+      "contractSum": "7 600 000,00 ₽",
       "image": "assets/site-photos/projects/cases/grand-spb.png"
     },
     {
@@ -267,8 +294,10 @@
       "units": "ГПУ 180 кВт × 4",
       "mode": "Основной",
       "scope": ["Поставка", "ПНР"],
+      "description": "Поставка агрегатов на раме и пусконаладочные работы (ПНР). Настройка систем управления и ввод в эксплуатацию.",
       "result": "Поставка и ввод в эксплуатацию 4 агрегатов (0,72 МВт).",
       "ndaLabel": "NDA: без заказчика/адреса/стоимости",
+      "contractSum": "14 200 000,00 ₽",
       "image": "assets/site-photos/projects/cases/grand-spb.png"
     },
     {
@@ -283,8 +312,10 @@
       "units": "ГПУ 250 кВт × 1",
       "mode": "Основной",
       "scope": ["Поставка", "Контейнеризация", "Интеграция", "ПНР"],
+      "description": "Поставка контейнерного решения, интеграция и настройка систем управления, выполнение пусконаладочных работ (ПНР) и ввод в эксплуатацию.",
       "result": "Поставка и интеграция 1 агрегата (0,25 МВт) в контейнере.",
       "ndaLabel": "NDA: без заказчика/адреса/стоимости",
+      "contractSum": "6 800 000,00 ₽",
       "image": "assets/site-photos/projects/cases/grand-spb-container.png"
     },
     {
@@ -299,8 +330,10 @@
       "units": "ГПУ 250 кВт × 1",
       "mode": "Основной",
       "scope": ["Поставка", "Контейнеризация", "ПНР"],
+      "description": "Поставка ГПУ в контейнерном исполнении и выполнение пусконаладочных работ (ПНР). Настройка автоматики и ввод в эксплуатацию.",
       "result": "Поставка и запуск 1 агрегата (0,25 МВт) в контейнерном исполнении.",
       "ndaLabel": "NDA: без заказчика/адреса/стоимости",
+      "contractSum": "6 500 000,00 ₽",
       "image": "assets/site-photos/projects/cases/uralpromenergo.jpg"
     },
     {
@@ -315,8 +348,10 @@
       "units": "ГПУ 180 кВт × 2",
       "mode": "Основной",
       "scope": ["Поставка", "Контейнеризация", "ПНР"],
+      "description": "Поставка агрегатов в контейнерном исполнении, интеграция и выполнение пусконаладочных работ (ПНР).",
       "result": "Поставка и ввод в эксплуатацию 2 агрегатов (0,36 МВт) в контейнере.",
       "ndaLabel": "NDA: без заказчика/адреса/стоимости",
+      "contractSum": "13 700 000,00 ₽",
       "image": "assets/site-photos/projects/cases/panishev.jpeg"
     },
     {
@@ -331,9 +366,12 @@
       "units": "ГПУ 250 кВт × 1",
       "mode": "Основной",
       "scope": ["Поставка", "ПНР"],
+      "description": "Поставка агрегата, базовая интеграция и пусконаладочные работы (ПНР), ввод в эксплуатацию.",
       "result": "Поставка и запуск 1 агрегата (0,25 МВт).",
       "ndaLabel": "NDA: без заказчика/адреса/стоимости",
+      "contractSum": "5 000 000,00 ₽",
       "image": "assets/site-photos/projects/cases/gudzon.jpg"
     }
   ]
 }
+
