--- a/data/projects.json
+++ b/data/projects.json
@@ -45,6 +45,7 @@
       "units": "ГПУ (конфигурация по проекту)",
       "mode": "Основной",
       "scope": ["Поставка", "Доработка", "ПНР", "Сервис"],
+      "customer": "FAST MINE",
       "description": "Частичная поставка оборудования, доработка клиентских ГПУ под условия эксплуатации, пусконаладочные работы (ПНР) и сервисное обслуживание. Настройка режимов работы и регламентов эксплуатации под нагрузку 24/7.",
       "result": "Ввод в эксплуатацию и обслуживание объекта под режим 24/7.",
       "image": "assets/site-photos/projects/cases/fast-mine-5mw.jpg"
@@ -94,6 +95,7 @@
       "units": "ГПУ 250 кВт × 12",
       "mode": "Основной",
       "scope": ["Поставка", "Интеграция", "Автоматика", "Параллельная работа", "ПНР"],
+      "customer": "ООО «БИО-СФЕРА»",
       "description": "Поставка ГПУ, интеграция в инфраструктуру объекта, настройка автоматики, параллельной работы и защит, выполнение пусконаладочных работ (ПНР) и ввод в эксплуатацию.",
       "result": "Установлено 12 агрегатов, суммарно 3,0 МВт установленной мощности.",
       "contractSum": "85 000 000,00 ₽",
@@ -111,6 +113,7 @@
       "units": "ГПУ 250 кВт × 10",
       "mode": "Основной",
       "scope": ["Поставка", "Интеграция", "Утилизация тепла", "ПНР", "Автоматика"],
+      "customer": "ООО «НСК-ГРУПП»",
       "description": "Поставка и интеграция энергоустановок с системой утилизации тепла. Настройка автоматики, режимов работы и защит. Пусконаладочные работы (ПНР) и ввод в эксплуатацию.",
       "result": "Поставка и ввод в эксплуатацию 10 агрегатов (2,5 МВт).",
       "contractSum": "68 200 000,00 ₽"
@@ -127,6 +130,7 @@
       "units": "ГПУ 250 кВт × 7",
       "mode": "Основной",
       "scope": ["Поставка", "Утилизация тепла", "ПНР", "Автоматика"],
+      "customer": "ООО «ДОРГРАНИТ-М»",
       "description": "Поставка ГПУ на раме с системой утилизации тепла. Настройка автоматики и защит, выполнение пусконаладочных работ (ПНР) и ввод в эксплуатацию.",
       "result": "Установлено 7 агрегатов, суммарно 1,75 МВт установленной мощности.",
       "contractSum": "47 000 000,00 ₽"
@@ -143,6 +147,7 @@
       "units": "ГПУ 400 кВт × 2; ГПУ 250 кВт × 2",
       "mode": "Основной",
       "scope": ["Поставка", "Утилизация тепла", "ПНР", "Автоматика"],
+      "customer": "СТРОЙСОЮЗ",
       "description": "Поставка оборудования на раме с системой утилизации тепла. Интеграция, настройка автоматики и защит. Выполнение пусконаладочных работ (ПНР) и ввод в эксплуатацию.",
       "result": "Поставка и запуск комплекса, суммарно 1,3 МВт установленной мощности.",
       "contractSum": "39 157 200,00 ₽",
@@ -160,6 +165,7 @@
       "units": "ГПУ 250 кВт × 6",
       "mode": "Основной",
       "scope": ["Поставка", "Интеграция", "ПНР"],
+      "customer": "ООО «ПИОНЕРБИТ»",
       "description": "Поставка ГПУ и интеграция в инфраструктуру объекта. Настройка автоматики и защит. Пусконаладочные работы (ПНР) и ввод в эксплуатацию.",
       "result": "Установлено 6 агрегатов, суммарно 1,5 МВт установленной мощности.",
       "contractSum": "36 600 000,00 ₽"
@@ -176,6 +182,7 @@
       "units": "ГПУ 250 кВт × 6",
       "mode": "Основной",
       "scope": ["Поставка", "ПНР", "Автоматика"],
+      "customer": "ИП Носков Дмитрий Николаевич",
       "description": "Поставка ГПУ, монтажная интеграция и пусконаладочные работы (ПНР). Настройка автоматики и защит, ввод в эксплуатацию.",
       "result": "Поставка и ввод в эксплуатацию 6 агрегатов (1,5 МВт).",
       "contractSum": "38 144 000,00 ₽",
@@ -193,6 +200,7 @@
       "units": "ГПУ 180 кВт × 5",
       "mode": "Основной",
       "scope": ["Поставка", "Контейнеризация", "Параллельная работа", "Утилизация тепла", "ПНР"],
+      "customer": "ООО «Амбар Пласт»",
       "description": "Поставка контейнерного решения с настройкой параллельной работы, интеграцией систем утилизации тепла, выполнением ПНР и вводом в эксплуатацию.",
       "result": "Установлено 5 агрегатов (0,9 МВт) в контейнерном исполнении.",
       "contractSum": "39 430 000,00 ₽",
@@ -210,6 +218,7 @@
       "units": "ГПУ 250 кВт × 2",
       "mode": "Основной",
       "scope": ["Поставка", "Параллельная работа", "ПНР", "Автоматика"],
+      "customer": "ООО «Амбар Пласт»",
       "description": "Поставка агрегатов, интеграция и настройка параллельной работы с сетью, выполнение ПНР и ввод в эксплуатацию.",
       "result": "Поставка и интеграция 2 агрегатов (0,5 МВт).",
       "contractSum": "13 500 000,00 ₽",
@@ -227,6 +236,7 @@
       "units": "ГПУ 250 кВт × 5",
       "mode": "Основной",
       "scope": ["Поставка", "Интеграция", "ПНР"],
+      "customer": "ООО «ЭКОГРУПП СПБ»",
       "description": "Поставка агрегатов (кожух), интеграция и настройка, выполнение пусконаладочных работ (ПНР) и ввод в эксплуатацию.",
       "result": "Поставка 5 агрегатов, суммарно 1,25 МВт установленной мощности.",
       "contractSum": "26 350 000,00 ₽",
@@ -244,6 +254,7 @@
       "units": "ГПУ 250 кВт × 2",
       "mode": "Основной",
       "scope": ["Поставка", "Рекуперация тепла", "Параллельная работа", "ПНР"],
+      "customer": "ООО «ЮГ-БЕТОН-СЕРВИС»",
       "description": "Поставка агрегатов, интеграция модуля рекуперации/утилизации тепла, настройка параллельной работы с сетью и выполнение ПНР.",
       "result": "Поставка и ввод в эксплуатацию 2 агрегатов (0,5 МВт).",
       "contractSum": "12 450 000,00 ₽",
@@ -261,6 +272,7 @@
       "units": "ГПУ 180 кВт × 2",
       "mode": "Основной",
       "scope": ["Поставка", "ПНР"],
+      "customer": "ООО «Гранд-СПб»",
       "description": "Поставка агрегатов на раме и выполнение пусконаладочных работ (ПНР). Настройка базовой автоматики и ввод в эксплуатацию.",
       "result": "Поставка и запуск 2 агрегатов (0,36 МВт).",
       "contractSum": "7 600 000,00 ₽",
@@ -278,6 +290,7 @@
       "units": "ГПУ 180 кВт × 4",
       "mode": "Основной",
       "scope": ["Поставка", "ПНР"],
+      "customer": "ООО «Гранд-СПб»",
       "description": "Поставка агрегатов на раме и пусконаладочные работы (ПНР). Настройка систем управления и ввод в эксплуатацию.",
       "result": "Поставка и ввод в эксплуатацию 4 агрегатов (0,72 МВт).",
       "contractSum": "14 200 000,00 ₽",
@@ -295,6 +308,7 @@
       "units": "ГПУ 250 кВт × 1",
       "mode": "Основной",
       "scope": ["Поставка", "Контейнеризация", "Интеграция", "ПНР"],
+      "customer": "ООО «Гранд-СПб»",
       "description": "Поставка контейнерного решения, интеграция и настройка систем управления, выполнение пусконаладочных работ (ПНР) и ввод в эксплуатацию.",
       "result": "Поставка и интеграция 1 агрегата (0,25 МВт) в контейнере.",
       "contractSum": "6 800 000,00 ₽",
@@ -312,6 +326,7 @@
       "units": "ГПУ 250 кВт × 1",
       "mode": "Основной",
       "scope": ["Поставка", "Контейнеризация", "ПНР"],
+      "customer": "ООО «УралПромЭнерго»",
       "description": "Поставка ГПУ в контейнерном исполнении и выполнение пусконаладочных работ (ПНР). Настройка автоматики и ввод в эксплуатацию.",
       "result": "Поставка и запуск 1 агрегата (0,25 МВт) в контейнерном исполнении.",
       "contractSum": "6 500 000,00 ₽",
@@ -329,6 +344,7 @@
       "units": "ГПУ 180 кВт × 2",
       "mode": "Основной",
       "scope": ["Поставка", "Контейнеризация", "ПНР"],
+      "customer": "Панишев Юрий Григорьевич",
       "description": "Поставка агрегатов в контейнерном исполнении, интеграция и выполнение пусконаладочных работ (ПНР).",
       "result": "Поставка и ввод в эксплуатацию 2 агрегатов (0,36 МВт) в контейнере.",
       "contractSum": "13 700 000,00 ₽",
@@ -346,6 +362,7 @@
       "units": "ГПУ 250 кВт × 1",
       "mode": "Основной",
       "scope": ["Поставка", "ПНР"],
+      "customer": "ООО «ГУДЗОН»",
       "description": "Поставка агрегата, базовая интеграция и пусконаладочные работы (ПНР), ввод в эксплуатацию.",
       "result": "Поставка и запуск 1 агрегата (0,25 МВт).",
       "contractSum": "5 000 000,00 ₽",
